<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_url"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/image_url" />

            <ImageView
                android:id="@+id/image_thumbnailUrl"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/image_url"
                android:contentDescription="@string/image_thumbnailUrl" />

            <TextView
                android:id="@+id/album_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/image_thumbnailUrl"
                android:text="@string/albumId"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/album_id"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/image_thumbnailUrl"
                android:text="@string/id"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/id"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/image_thumbnailUrl"
                android:text="@string/title"
                android:textStyle="bold"/>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>